# abused

./: CMakeLists.txt  README.md  vcpkg.json
mobile/: README.md
mobile/AbusedMobile/: App.tsx  package.json  setup-sdl2-android.sh  setup-sdl2-ios.sh  tsconfig.json
mobile/AbusedMobile/android/app/: CMakeLists.txt  build.gradle
mobile/AbusedMobile/android/app/src/main/cpp/: abused-bridge.cpp
mobile/AbusedMobile/android/app/src/main/java/com/abused/: AbusedEngineModule.java  AbusedEnginePackage.java
mobile/AbusedMobile/ios/: Podfile
mobile/AbusedMobile/ios/AbusedMobile/Bridge/: AbusedEngine.h  AbusedEngine.mm
mobile/AbusedMobile/src/components/: TouchAim.tsx  VirtualJoystick.tsx
mobile/AbusedMobile/src/native/: AbusedEngine.ts
mobile/docs/: BRIDGE_API.md  BUILD.md  CONTROLS.md  SDL2_INTEGRATION.md
src/: CMakeLists.txt
src/mobile/: mobile_input.cpp  mobile_input.h  mobile_sdl.cpp  mobile_sdl.h
